--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "node test/all.js"
   },
+  "stability": "unstable",
   "repository": {
     "type": "git",
     "url": "https://github.com/DamonOehlman/normalice.git"
