--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Normalize an ice server (stun,turn) configuration object or string into a consistent format usable by browsers",
   "main": "index.js",
   "scripts": {
-    "test": "node test/all.js"
+    "test": "node test/all.js",
+    "gendocs": "gendocs > README.md"
   },
   "stability": "unstable",
   "repository": {
